--- a/requirements.txt
+++ b/requirements.txt
@@ -44,3 +44,9 @@ trove-classifiers==2023.9.19
 urllib3==2.0.6
 virtualenv==20.24.5
 zipp==3.17.0
+
+Faker~=20.0.3
+pip~=23.3.1
+wheel~=0.41.2
+setuptools~=68.2.2
+Cython~=0.29.36
